--- a/HTML/selectie_vizita.html
+++ b/HTML/selectie_vizita.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang=>
     <head>
         <meta charset ="utf-8">
         <meta name="viewport" contenct="width=device-width, initial-scale=1.0">
@@ -10,10 +10,10 @@
     <body>
         <div class="container">
             <header>
-                <h1 class="title">Congratz</h1>
+                <h1 class="title">Selecteaza cum doresti sa creezi cartea de vizita</h1>
             </header>
-            <button class="button"><a href="selectie_felicitare.html" target="_self">Felicitare</a></button>
-            <button class="button"><a href="selectie_vizita.html" target="_self">Carte de vizita</a></button>
+            <button class="button"><a href="premade_vizita.html" target="_self">Premade</a></button>
+            <button class="button"><a href="editor_vizita.html" target="_self">Custom</a></button>
         </div>
 
     </body>
