--- a/Content_HTML/HTML_Pages/selectie_vizita.html
+++ b/Content_HTML/HTML_Pages/selectie_vizita.html
@@ -8,13 +8,15 @@
         </style>
     </head>
     <body>
+    <center>
         <div class="container">
             <header>
                 <h1 class="title">Selecteaza cum doresti sa creezi cartea de vizita</h1>
             </header>
-            <button class="button"><a href="premade_vizita.html" target="_self">Premade</a></button>
-            <button class="button"><a href="editor_vizita.html" target="_self">Custom</a></button>
+            <a href="premade_vizita.html" class="button b3">Premade</a>
+            <a href="editor_vizita.html" class="button b3">Custom</a>
         </div>
+    </center>
 
     </body>
 </html>
