--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
         </style>
     </head>
     <body>
+    <center>
+
         <div class="container">
-
-            
-
-
+        
             <header>
-                <a href="https://google.com" class="button b3">Go to Google</a>
                 <h1 class="title">Congratz</h1>
             </header>
-            <button class="button b3"><a href="Content_HTML/HTML_Pages/selectie_felicitare.html" target="_self">Felicitare</a></button>
-            <button class="button b3"><a href="Content_HTML/HTML_Pages/selectie_vizita.html" target="_self">Carte de vizita</a></button>
+
+            <a href="Content_HTML/HTML_Pages/selectie_felicitare.html" class="button b3">Felicitare</a>
+            <a href="Content_HTML/HTML_Pages/selectie_vizita.html" class="button b3">Carte de vizita</a>
+
         </div>
+    </center>
 
 
     </body>
