--- a/Scholarly/scholarly.html
+++ b/Scholarly/scholarly.html
@@ -7,8 +7,8 @@
 	<style type="text/css">
 		#main-header{
 			text-align:center;
-			background-color:rgba(175, 174, 174, 0.288);
-			color:rgb(223, 150, 150);
+			background-color:#2a003d;
+			color:rgb(223, 221, 221);
 			padding:10px;
 		}
 
@@ -73,14 +73,14 @@
 	<section typeof="sa:Introduction" id="introducere" role="doc-introduction">
 			<h2><span>II.</span>Introducere</h2>
             <h4> Elemente de design </h4>
-            <small> on March 24</small>
+
             <p>Decidem asupra elementelor de design, culori, plasare in pagina, numar de pagini. Optam pentru forme geometrice simple, game-like. Optam pentru o schema de culori relaxanta pentru ochi si care sa poate scoate in evidenta elementele principale. Alegem forme goale sau umplute ca si pattern de fundal pentru a sugera faptul ca site-ul nostru este un mediu creativ.</p>
             <a href="variante.html">Read More</a>
 
 	</section>
 		<section typeof="sa:MaterialsAndMethods" id="functionalitati" role="doc-chapter">
 			<h2><span>III. </span>Funcționalitățile aplicației</h2>
-			<small> on March 31</small>
+
 			<p>
 				În această parte a documentului HTML vom prezenta funcționalitățile actuale ale aplicației și vom explica rolul și metoda de implementare pentru fiecare element în parte.
 			</p>
@@ -106,7 +106,7 @@
             </p>
 
 			<h3>Elemente ale paginilor</h3>
-            <small> on April 6</small>
+
 			<p>In meniul 1, unde utilizatorul poate alege creearea unei carti de vizita/felicitare, va exista un meniu cu aceste 2 optiuni, ce vor directiona utilizatorul la selectia metodei de creare.</p>
             <p>In meniurile 2.1 si 2.2, unde utilizatorul poate alege sa creeze de la 0 sau sa urmeze un template, va exista un meniu cu aceste 2 optiuni ce vor directiona utilizatorul spre paginile de editare.</p>
             <p>In paginile de template (2.1.1, 2.2.1) vor exista in partea stanga o serie de templates, utilizatorul putand schimba setul de culori, adaugarea unui text in campurile presetate.</p>
