--- a/Scholarly/variante.html
+++ b/Scholarly/variante.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Variante></title>
+    <title>Variante</title>
     <style type="text/css">
 		#main-header{
 			text-align:center;
-			background-color:rgba(238, 16, 16, 0.288);
+			background-color:rgba(211, 20, 163, 0.842);
 			color:rgb(253, 253, 253);
 			padding:10px;
 		}
