Scholarly last update

--- a/Scholarly/scholarly.html
+++ b/Scholarly/scholarly.html
@@ -4,19 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<title> ConGratz - Scholarly HTML</title>
-	<style type="text/css">
-		#main-header{
-			text-align:center;
-			background-color:#2a003d;
-			color:rgb(223, 221, 221);
-			padding:10px;
-		}
-
-		#main-footer{
-			text-align: center;
-			font-size:18px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/text.css">
 </head>
 <body prefix="schema: http://schema.org" style="font-family: 'Times New Roman', Times, serif; font-size: 13pt;">
 	<header id="main-header">
